--- a/css/style.css
+++ b/css/style.css
@@ -685,7 +685,16 @@ h3.my-profession
 {
     position: relative;
     padding-left: 37px;
-    padding-bottom: 50px;
+}
+
+.about .about-content .education .timeline .timeline-item
+{
+    padding-bottom: 75px;
+}
+
+.about .about-content .experiance .timeline .timeline-item
+{
+    padding-bottom: 25px;
 }
 
 .about .about-content .timeline .timeline-item:last-child
@@ -732,9 +741,17 @@ h3.my-profession
 {
     font-weight: 700;
     font-size: 18px;
-    margin-bottom: 15px;
+    margin-bottom: 0;
     text-transform: capitalize;
     color: var(--text-black-900);
+}
+
+.about .about-content .timeline .timeline-subtitle
+{
+    font-weight: 700;
+    font-size: 16px;
+    margin-bottom: 15px;
+    color: var(--text-black-700);
 }
 
 .about .about-content .timeline .timeline-text
